Fix overflow scroll bar issue

--- a/health_index_app/health_index_app/Server/wwwroot/css/site.css
+++ b/health_index_app/health_index_app/Server/wwwroot/css/site.css
@@ -79,7 +79,7 @@ body {
   position: absolute;
   bottom: 0;
   width: 100%;
-  overflow: scroll;
+  overflow: auto;
   white-space: nowrap;
   line-height: 60px;
 }
